[package]
name = "flow_helpers"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["logger", "web_server", "mongo", "flow", "websocket", "proc"]

mongo = [
  "mongodb",
  "serde",
  "bson",
  "async-trait",
  "futures",
  "serde_json",
  "proc",
]
logger = ["env_logger", "chrono", "log"]
web_server = ["actix-web", "actix-cors", "serde", "proc"]
flow = ["flow-sdk", "flow_rs", "serde_json", "async-trait", "serde"]
websocket = ["actix-web-actors", "actix", "rand", "serde_json", "proc"]
proc_macro = ["proc"]

[lib]
name = "flow_helpers"

[dependencies]
# logger
log = { version = "0.4.20", optional = true }
chrono = { version = "0.4.26", optional = true }
env_logger = { version = "0.10.0", optional = true }

proc = { path = "proc", optional = true }

# web_server
actix-cors = { version = "0.6.4", optional = true }
actix-web = { version = "4.3.1", optional = true }

# mongo
mongodb = { version = "2.6.1", optional = true }
bson = { version = "2", features = ["chrono-0_4"], optional = true }
serde = { version = "1.0.185", optional = true }
async-trait = { version = "0.1.73", optional = true }
futures = { version = "0.3.28", optional = true }

# flow
flow-sdk = { git = "https://github.com/barterYard/flow.rs", branch = "protobuf_update", optional = true }
serde_json = { version = "1.0.105", optional = true }
flow_rs = { git = "https://github.com/barterYard/flow_rust", branch = "main", optional = true }

# websocket
actix-web-actors = { version = "4.2.0", optional = true }
actix = { version = "0.13.0", optional = true }
rand = { version = "0.8.5", optional = true }
